syntax = "proto3";
package com.example.grpc;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}

service GreetingService {
  rpc greeting(HelloRequest) returns (HelloResponse);

  rpc greetings(HelloRequest) returns (stream HelloResponse);

  rpc endlessGreetings(HelloRequest) returns (stream HelloResponse);
}

/*
Main types:
 - double
 - float
 - bool
 - string
 - bytes
*/

/*
enums

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
  enum Corpus {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6;
  }
  Corpus corpus = 4;
}
*/

/*
repeated

message SearchResponse {
  repeated Result results = 1;
}

message Result {
  string url = 1;
  string title = 2;
  repeated string snippets = 3;
}
*/

/*
imports

import "google/protobuf/any.proto";

message ErrorStatus {
  string message = 1;
  repeated google.protobuf.Any details = 2;
}
*/

/*
maps

message MapFieldEntry {
  key_type key = 1;
  value_type value = 2;
}

repeated MapFieldEntry map_field = N;
*/

/*
The Protocol Compiler is invoked as follows:

protoc --proto_path=IMPORT_PATH \
  --cpp_out=DST_DIR \
  --java_out=DST_DIR \
  --python_out=DST_DIR \
  --go_out=DST_DIR \
  --ruby_out=DST_DIR \
  --objc_out=DST_DIR \
  --csharp_out=DST_DIR \
  --php_out=DST_DIR \
  path/to/file.proto
*/
